[gd_scene load_steps=11 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]
[ext_resource path="res://OnionRing.tscn" type="PackedScene" id=5]
[ext_resource path="res://Ground.gd" type="Script" id=6]
[ext_resource path="res://StateManager.gd" type="Script" id=7]
[ext_resource path="res://PowerBar.gd" type="Script" id=8]
[ext_resource path="res://States.gd" type="Script" id=10]

[sub_resource type="BoxShape" id=9]
extents = Vector3( 500, 1, 500 )

[sub_resource type="SpatialMaterial" id=11]
albedo_color = Color( 0.25098, 0.478431, 0.223529, 1 )

[sub_resource type="CubeMesh" id=10]
material = SubResource( 11 )
size = Vector3( 1000, 2, 1000 )

[sub_resource type="CylinderMesh" id=12]

[node name="Main" type="Node"]

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.415011, 0.909816, 0, -0.909816, 0.415011, 0, 22.7796, 0 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="DirectionLabel" type="Label" parent="Control"]
margin_left = 719.0
margin_top = 63.0
margin_right = 794.0
margin_bottom = 77.0
text = "Direction: 0"

[node name="AngleLabel" type="Label" parent="Control"]
margin_left = 720.0
margin_top = 87.0
margin_right = 772.0
margin_bottom = 101.0
text = "Angle: 0"

[node name="VelocityLabel" type="Label" parent="Control"]
margin_left = 720.0
margin_top = 111.0
margin_right = 787.0
margin_bottom = 125.0
text = "Velocity: 0"

[node name="PlayerLabel" type="Label" parent="Control"]
margin_left = 719.0
margin_top = 135.0
margin_right = 813.0
margin_bottom = 149.0
text = "Player:"

[node name="PowerBar" type="Control" parent="Control"]
margin_left = 1.0
margin_top = 4.0
margin_right = 41.0
margin_bottom = 44.0
script = ExtResource( 8 )

[node name="Background" type="ColorRect" parent="Control/PowerBar"]
margin_left = 294.0
margin_top = 483.0
margin_right = 711.0
margin_bottom = 523.0
color = Color( 0, 0, 0, 1 )

[node name="Foreground" type="ColorRect" parent="Control/PowerBar"]
margin_left = 294.0
margin_top = 483.0
margin_right = 711.0
margin_bottom = 523.0

[node name="OnionRing" parent="." instance=ExtResource( 5 )]
transform = Transform( 0.0021642, -0.999998, 0, 0.999998, 0.0021642, 0, 0, 0, 1, 0, 2.70885, 0 )

[node name="StateManager" type="Node" parent="."]
script = ExtResource( 7 )

[node name="States" type="Node" parent="StateManager"]
script = ExtResource( 10 )

[node name="Players" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.7172, 0.321076, 2.84082 )

[node name="Ground" type="StaticBody" parent="."]
script = ExtResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.507092, 0 )
shape = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.00227, -1.46275, 3.5028 )
layers = 2
mesh = SubResource( 10 )
skeleton = NodePath("../../Players")
material/0 = null

[node name="Target" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.356383, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Target"]
mesh = SubResource( 12 )
material/0 = null

[connection signal="loaded" from="StateManager" to="StateManager/States" method="_on_StateManager_loaded"]
[connection signal="next_turn" from="StateManager" to="StateManager/States" method="_on_StateManager_next_turn"]
[connection signal="state_changed" from="StateManager" to="StateManager/States" method="_on_StateManager_state_changed"]
[connection signal="aim_changed" from="StateManager/States" to="Control" method="_on_States_aim_changed"]
